--- a/nodejs-project/views/admin/roles/edit.ejs
+++ b/nodejs-project/views/admin/roles/edit.ejs
@@ -12,23 +12,17 @@
            <a href="/admin/roles" style="float: right;"><button type="button" class="btn btn-primary">Back</button></a>
        </h4>
 
-       <form class="row g-3 mt-4">
+       <form class="row g-3 mt-4" method="POST" action="/admin/role/update/<%- role._id%>">
         <div class="col-md-12">
-          <label for="validationCustom01" class="form-label">First name</label>
-          <input type="text" class="form-control" id="validationCustom01" value="Mark" required>
-          <div class="valid-feedback">
-            Looks good!
-          </div>
+          <label for="validationCustom01" class="form-label">Role name </label>
+          <input type="text" name="name" class="form-control" id="validationCustom01" value="<%-role.name %>" required placeholder="Enter Role">
         </div>
         <div class="col-md-12">
-          <label for="validationCustom04" class="form-label">State</label>
-          <select class="form-select" id="validationCustom04" required>
-            <option selected disabled value="">Choose...</option>
-            <option>...</option>
+          <label for="validationCustom04" class="form-label">status</label>
+          <select name="status" class="form-select" id="validationCustom04" required>
+            <option value="1" <%- role.status == true ? 'selected' : '' %> >Active</option>
+            <option value="2" <%- role.status == false ? 'selected' : '' %> >InActive</option>
           </select>
-          <div class="invalid-feedback">
-            Please select a valid state.
-          </div>
         </div>        
         <div class="col-12">
           <button class="btn btn-primary" type="submit">Submit form</button>
